# ipa325_wsg50

./: .hgignore  .travis.yml  LICENSE  README.md
ipa325_wsg50/: CMakeLists.txt  package.xml
ipa325_wsg50/action/: LwrRunControlScheme.action  WSG50GraspPart.action  WSG50Homing.action  WSG50PrePositionFingers.action  WSG50ReleasePart.action
ipa325_wsg50/etc/: 980039-FRI-Driver.init
ipa325_wsg50/include/: WSG50Communicator.h  WSG50Controller.h  WSG50Observer.h  WSG50ROSNode.h  WSG50RosObserver.h  WSG50RosSubject.h  WSG50Subject.h  testerMain.h
ipa325_wsg50/launch/: wsg50-210.launch  wsg50.launch
ipa325_wsg50/msg/: systState.msg
ipa325_wsg50/src/: WSG50Communicator.cpp  WSG50Controller.cpp  WSG50Observer.cpp  WSG50ROSNode.cpp  WSG50RosObserver.cpp  WSG50RosSubject.cpp  WSG50Subject.cpp  lwr_testclient.cpp  testerMain.cpp
ipa325_wsg50/srv/: ackFastStop.srv  clearSoftLimits.srv  fastStop.srv  setAcceleration.srv  setForceLimit.srv  setSoftLimits.srv  stop.srv  tareForceSensor.srv
ipa325_wsg50/urdf/: wsg50.urdf.xacro
weiss_wsg32_support/: CMakeLists.txt  package.xml
weiss_wsg32_support/launch/: wsg32.launch
weiss_wsg32_support/meshes/: WSG32_body.stl  WSG32_finger.stl
weiss_wsg32_support/urdf/: wsg32.urdf.xacro
wsg_simulator/: CMakeLists.txt  package.xml
wsg_simulator/include/wsg_simulator/: WSG50Simulator.h
wsg_simulator/src/: WSG50ROSNode.cpp  WSG50Simulator.cpp
